tests/error/must_abstract0.gw
class C {
  fun abstract void test(int i);
}
